--- a/card.html
+++ b/card.html
@@ -1,15 +1,26 @@
 <html>
   <body>
     <div itemscope itemtype="http://schema.org/Person">;
+<img src="zdjecie.jpg" itemgroup ="img">
       <span itemprop="name">Magdalena Dynowska</span>
       <span itemprop="jobTitle">Student</span>
       <a href="http://v-ie.uek.krakow.pl/~s180070";
-itemgroup="url">http://v-ie.uek.krakow.pl/~s180070</a>;
-	  <img src="zdjecie.png" itemgroup ="img">
+itemgroup="url">http://v-ie.uek.krakow.pl/~s180070</a>
 	  <ul itemgroup="socialMedia">
-	  <li><a href="https://www.facebook.pl/
-itemgroup="url">https://www.facebook.pl/</a></li>;
-
+	  <li><a href="https://www.facebook.pl/itemgroup="url">https://www.facebook.pl/</a></li>
+	  <li><a href="https://twitter.com/?lang=plitemgroup="url">https://twitter.com/?lang=pl</a></li>
+	  <li><a href="https://www.google.pl/ itemgroup="url">https://www.google.pl/</a></li>
+	  </ul><br>
+	  <ul itemgroup="zainteresowania">
+Zainteresowania:
+	  <li>narciarstwo</li>
+	  <li>cardmaking</li>
+	  <li>scrapbooking</li>
+	  </ul>
+	   <ul itemgroup="edukacja">
+Edukacja:
+	  <li>2010-2013 <a href="http://www.xlo.pl/"url">X LO w Katowicach im. I.J.Paderewkiego</a></li>
+	  <li>od 2013 <a href="http://www.uek.krakow.pl/"url">Uniwersytet Ekonomiczny w Krakowie</a></li>
 	  </ul>
     </div>
   </body>
